[package]
name = "rsduck"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
axum = "0.7"
duckdb = { version = "1.3", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1.0"
uuid = { version = "1.17", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
r2d2 = "0.8"
regex = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }

[dev-dependencies]
axum-test = "15.7"
tokio-test = "0.4"
