[package]
name = "rsduck"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
axum = "0.8"
duckdb = { version = "1.4", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1.0"
uuid = { version = "1.18", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
r2d2 = "0.8"
regex = "1.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

[dev-dependencies]
axum-test = "18.2"
tokio-test = "0.4"
